--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
 
     steps:
       - checkout
+      - setup_remote-docker
 
       # Download and cache dependencies
       - restore_cache:
